force-app/main/default/objects/custom_create85__c/custom_create85__c.object-meta.xml
<CustomObject>
    <label>Custom created object85</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects85</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>