force-app/main/default/objects/custom_create85__c/fields/custom_create_85field523__c.field-meta.xml
<CustomField>
    <fullName>custom_create_85field523__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 85field523</label>
    <type>Checkbox</type>
</CustomField>